--- a/src/locale/es.json
+++ b/src/locale/es.json
@@ -47,7 +47,8 @@
             "sv": "Sueco",
             "no": "Noruego",
             "en": "Inglés",
-            "es": "Español"
+            "es": "Español",
+            "fr": "Français"
         }
     }
 }
