--- a/src/locale/no.json
+++ b/src/locale/no.json
@@ -47,7 +47,8 @@
             "sv": "svensk",
             "no": "norsk",
             "en": "engelsk",
-            "es": "spansk"
+            "es": "spansk",
+            "fr": "Français"
         }
     }
 }
