feat(audio): add URL error handling and display in AudioManager
Implement error handling for audio URL downloads with specific error messages for different failure cases (CORS, not found, access denied). Add UI to display these errors to users with a dismiss button. Update localization files with new error messages in all supported languages.

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -25,6 +25,10 @@
             "record_description": "Record audio using your microphone",
             "submit": "Load",
             "settings": "Settings",
+            "url_error_generic": "Error loading audio file from URL.",
+            "url_error_cors": "Unable to load audio file: URL does not allow access from this site (CORS error).",
+            "url_error_not_found": "Audio file not found at the specified URL.",
+            "url_error_access": "Access denied to audio file at the specified URL.",
             "gpu": "GPU",
             "gpu_disabled": "GPU (unsupported browser)",
             "clear_cache": "Clear cache",
