--- a/src/locale/es.json
+++ b/src/locale/es.json
@@ -22,7 +22,11 @@
             "record": "Grabar",
             "record_description": "Graba audio usando tu micrófono",
             "submit": "Cargar",
-            "settings": "Configuraciones",
+            "settings": "Configuración",
+            "url_error_generic": "Error al cargar el archivo de audio desde la URL.",
+            "url_error_cors": "No se puede cargar el archivo de audio: la URL no permite el acceso desde este sitio (error CORS).",
+            "url_error_not_found": "Archivo de audio no encontrado en la URL especificada.",
+            "url_error_access": "Acceso denegado al archivo de audio en la URL especificada.",
             "gpu": "GPU",
             "gpu_disabled": "GPU (navegador no compatible)",
             "clear_cache": "Borrar caché",
