--- a/src/locale/fr.json
+++ b/src/locale/fr.json
@@ -25,6 +25,10 @@
             "record_description": "Enregistrer l'audio avec votre microphone",
             "submit": "Charger",
             "settings": "Paramètres",
+            "url_error_generic": "Erreur lors du chargement du fichier audio depuis l'URL.",
+            "url_error_cors": "Impossible de charger le fichier audio : l'URL ne permet pas l'accès depuis ce site (erreur CORS).",
+            "url_error_not_found": "Fichier audio introuvable à l'URL spécifiée.",
+            "url_error_access": "Accès refusé au fichier audio à l'URL spécifiée.",
             "gpu": "GPU",
             "gpu_disabled": "GPU (navigateur non supporté)",
             "clear_cache": "Vider le cache",
