--- a/src/locale/no.json
+++ b/src/locale/no.json
@@ -21,8 +21,12 @@
             "from_file": "Fra fil",
             "record": "Ta opp",
             "record_description": "Ta opp lyd med mikrofonen din",
-            "submit": "Last opp",
+            "submit": "Last inn",
             "settings": "Innstillinger",
+            "url_error_generic": "Feil ved lasting av lydfil fra URL.",
+            "url_error_cors": "Kan ikke laste lydfil: URL tillater ikke tilgang fra dette nettstedet (CORS-feil).",
+            "url_error_not_found": "Lydfil ikke funnet på den angitte URL-en.",
+            "url_error_access": "Tilgang nektet til lydfil på den angitte URL-en.",
             "gpu": "GPU",
             "gpu_disabled": "GPU (ikke kompatibel med nettleseren)",
             "clear_cache": "Tøm hurtigbuffer",
