--- a/src/locale/sv.json
+++ b/src/locale/sv.json
@@ -23,6 +23,10 @@
             "record_description": "Spela in ljud med din mikrofon",
             "submit": "Ladda",
             "settings": "Inställningar",
+            "url_error_generic": "Fel vid laddning av ljudfil från URL.",
+            "url_error_cors": "Kan inte ladda ljudfil: URL tillåter inte åtkomst från denna webbplats (CORS-fel).",
+            "url_error_not_found": "Ljudfil hittades inte på den angivna URL:en.",
+            "url_error_access": "Åtkomst nekad till ljudfil på den angivna URL:en.",
             "gpu": "GPU",
             "gpu_disabled": "GPU (ej kompatibel med webbläsaren)",
             "clear_cache": "Rensa cache",
