--- a/src/locale/es.json
+++ b/src/locale/es.json
@@ -46,7 +46,13 @@
         },
         "transcript": {
             "export": "Exportar",
-            "tokens_per_second": "tokens/segundo"
+            "tokens_per_second": "tokens/segundo",
+            "view_mode": "Modo de vista",
+            "chunks_view": "Vista por segmentos",
+            "speakers_view": "Vista por hablantes",
+            "auto_scroll": "Desplazamiento automático",
+            "speakers_detected": "{{count}} hablantes detectados",
+            "unknown_speaker": "Hablante desconocido"
         },
         "language_selector": {
             "title": "Idioma",
