feat(transcription): add real-time interim transcription display
- Implement interim transcript streaming from worker to UI
- Add new translation keys for real-time transcription status
- Disable speaker diarization temporarily for performance
- Update Transcript component to show interim results
- Enhance WhisperTextStreamer for better chunk handling

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -54,7 +54,9 @@
             "speakers_view": "Speakers view",
             "auto_scroll": "Auto scroll",
             "speakers_detected": "{{count}} speakers detected",
-            "unknown_speaker": "Unknown speaker"
+            "unknown_speaker": "Unknown speaker",
+            "transcribing_in_progress": "In progress...",
+            "real_time_transcription": "Real-time transcription:"
         },
         "language_selector": {
             "title": "Language",
